--- a/src/sass/sections/_AboutSection.scss
+++ b/src/sass/sections/_AboutSection.scss
@@ -9,11 +9,6 @@
     color: clr.$primary-text-color;
     align-items: center;
 
-    my-text-wrapper {
-        h1 {
-            font-size: 3rem;
-        }
-    }
 
     .my-details-wrapper {
         display: flex;
@@ -83,9 +78,10 @@
     color: clr.$slate;
 }
 
-.AboutSection ul {
+.AboutSection .skills-list {
     list-style-type: none;
     color: clr.$slate;
+
 }
 
 .AboutSection li::before {
