--- a/src/sass/utils/_breakpoint.scss
+++ b/src/sass/utils/_breakpoint.scss
@@ -76,6 +76,34 @@
 }
 
 @media only screen and (max-width:600px) {
+    .hero {
+        .button {
+            padding: 0.5em 2em;
+        }
+    }
+
+    .AboutSection {
+        .about-me-value {
+            padding-left: 1rem;
+
+        }
+
+        .my-details {
+            padding: 0.5rem;
+            font-size: 1rem;
+        }
+
+        .skills-list {
+
+            text-align: center;
+        }
+
+        .skills p {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+    }
+
     .ProjectSection .CardList {
         grid-template-columns: repeat(1, 1fr);
 
